# nx-playground

./: .env.example  .envrc  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  Tiltfile  bacon.toml  biome.json  docker-compose.dapr.yml  justfile  lefthook.yml  mprocs.yaml  nx.json  otel-collector-config.yaml  package.json
apps/cloud/pricing-collector/: Cargo.toml
apps/cloud/pricing-collector/src/: collector.rs  config.rs  main.rs
apps/cloud/pricing-collector/src/providers/: aws.rs  azure.rs  gcp.rs  mod.rs
apps/storefront-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/storefront-mobile/src-tauri/src/: lib.rs  main.rs
apps/storefront-mobile/src-tauri/src/commands/: mod.rs  products.rs
apps/utils/schema-gen/: Cargo.toml  project.json
apps/utils/schema-gen/src/: main.rs  parser.rs  schema.rs
apps/zerg/api/: Cargo.toml  SHUTDOWN_TESTING.md  TODO.md  Tiltfile  project.json
apps/zerg/api/k8s/: DEPLOYMENT_SCENARIOS.md  ENV_CONFIG.md
apps/zerg/api/src/: config.rs  events.rs  grpc_pool.rs  lib.rs  main.rs  openapi.rs  state.rs
apps/zerg/api/tests/: E2E_TEST_PLAN.md
apps/zerg/email/: Cargo.toml  Tiltfile  project.json
apps/zerg/email-nats/: Cargo.toml  Tiltfile  project.json
apps/zerg/email-nats/examples/: publish_test.rs
apps/zerg/email-nats/src/: lib.rs  main.rs
apps/zerg/email-worker/: Cargo.toml  Tiltfile  project.json
apps/zerg/email-worker/src/: lib.rs  main.rs
apps/zerg/email/src/: lib.rs  main.rs
apps/zerg/nats-worker/: Cargo.toml
apps/zerg/nats-worker/src/: config.rs  main.rs
apps/zerg/tasks/: Cargo.toml  Tiltfile  project.json
apps/zerg/tasks-worker/: Cargo.toml  project.json
apps/zerg/tasks-worker/src/: lib.rs  main.rs
apps/zerg/tasks/src/: conversions.rs  lib.rs  main.rs  server.rs  service.rs  vector_service.rs
apps/zerg/vector/: Cargo.toml  Tiltfile  project.json
apps/zerg/vector/src/: lib.rs  main.rs  server.rs  service.rs
ci/dagger/: Cargo.toml
ci/dagger/src/: lib.rs  main.rs
ci/dagger/src/pipelines/: build.rs  container.rs  lint.rs  mod.rs  nx.rs  test.rs
ci/dagger/src/utils/: config.rs  mod.rs  node_container.rs  nx.rs  rust_container.rs  sccache.rs  trivy.rs
libs/core/api-forge/: Cargo.toml
libs/core/api-forge/src/: error.rs  lib.rs  registry.rs  schema.rs
libs/core/axum-helpers/: Cargo.toml  PRODUCTION_SHUTDOWN.md  project.json
libs/core/axum-helpers/src/: audit.rs  cleanup.rs  health.rs  jwt_redis_auth.rs  lib.rs  server.rs  session.rs
libs/core/axum-helpers/tests/: rate_limit_test.rs
libs/core/config/: Cargo.toml  project.json
libs/core/config/src/: database.rs  lib.rs  mongodb.rs  redis.rs  server.rs  tracing.rs
libs/core/field-selector/: Cargo.toml  project.json
libs/core/field-selector/src/: lib.rs
libs/core/grpc/: Cargo.toml  project.json
libs/core/grpc/src/: conversions.rs  error.rs  lib.rs  retry.rs
libs/core/medium-mcp/: Cargo.toml
libs/core/medium-mcp/src/: client.rs  error.rs  lib.rs  mcp.rs  parser.rs  types.rs
libs/core/messaging/: Cargo.toml  project.json
libs/core/messaging/src/: config.rs  error.rs  event.rs  job.rs  lib.rs  processor.rs
libs/core/nats-worker/: Cargo.toml
libs/core/nats-worker/src/: config.rs  consumer.rs  dlq.rs  error.rs  health.rs  lib.rs  metrics.rs  producer.rs  worker.rs
libs/core/observability/: Cargo.toml  README.md
libs/core/observability/src/: lib.rs  middleware.rs  pricing.rs  resources.rs
libs/core/proc_macros/: Cargo.toml  README.md  project.json
libs/core/proc_macros/api_resource/: Cargo.toml  project.json
libs/core/proc_macros/sea_orm_resource/: Cargo.toml  project.json
libs/core/proc_macros/selectable_fields/: Cargo.toml  project.json
libs/core/proc_macros/src/: lib.rs
libs/core/stream-worker/: Cargo.toml  project.json
libs/core/stream-worker/src/: config.rs  consumer.rs  dlq.rs  error.rs  event.rs  health.rs  lib.rs  metrics.rs  producer.rs  registry.rs  resilience.rs  worker.rs
libs/database/: Cargo.toml  project.json
libs/database/src/: lib.rs  repository.rs
libs/database/src/cassandra/: config.rs  connector.rs  health.rs  mod.rs
libs/database/src/common/: error.rs  mod.rs  retry.rs
libs/database/src/mongodb/: config.rs  connector.rs  health.rs  mod.rs
libs/database/src/postgres/: config.rs  connector.rs  health.rs  mod.rs
libs/database/src/redis/: config.rs  connector.rs  health.rs  mod.rs
libs/domains/cloud_resources/: Cargo.toml  project.json
libs/domains/cloud_resources/src/: entity.rs  error.rs  handlers.rs  lib.rs  models.rs  postgres.rs  repository.rs  service.rs
libs/domains/events/: Cargo.toml
libs/domains/events/src/: dapr.rs  error.rs  handlers.rs  influxdb.rs  lib.rs  models.rs  mongodb.rs  repository.rs  service.rs
libs/domains/finops/: Cargo.toml
libs/domains/finops/src/: entity.rs  error.rs  handlers.rs  lib.rs  models.rs  postgres.rs  repository.rs  service.rs
libs/domains/finops/types/: ChatContext.ts  ChatMessage.ts  ChatResponse.ts  ChatSession.ts  CloudAccount.ts  CloudAccountStatus.ts  CloudResource.ts  Currency.ts  MessageRole.ts  Money.ts  OptimizationSummary.ts  Recommendation.ts  RecommendationDetails.ts  RecommendationStatus.ts  RecommendationType.ts  RegionSummary.ts  ResourceSpecs.ts  ResourceSummary.ts  SessionStatus.ts  ToolCallRecord.ts  TypeSummary.ts  Utilization.ts
libs/domains/items/: Cargo.toml
libs/domains/items/src/: error.rs  handlers.rs  lib.rs  models.rs  mongodb.rs  repository.rs  service.rs
libs/migration/: Cargo.toml  README.md  project.json
libs/migration/src/: lib.rs  m20241128_000000_bootstrap.rs  m20241129_000000_create_users.rs  m20241129_000001_create_projects.rs  m20241129_000002_create_cloud_resources.rs  m20241201_000000_seed_initial_data.rs  m20241206_000000_create_tasks.rs  m20241206_000001_seed_tasks.rs  m20241209_000000_extend_users_for_auth.rs  m20241209_000001_create_oauth_accounts.rs  m20241223_000000_add_oauth_ids_to_users.rs  m20241224_000000_create_upstream_oauth_tokens.rs  m20251213_000000_create_email_tables.rs  m20251216_000000_create_cloud_prices.rs  m20251219_000000_create_finops_chat.rs  main.rs
(+937 files in other folders)
