
[workspace]
resolver = '2'
members = [
	'libs/rpc',
	'apps/zerg/api',
	'apps/zerg/tasks',
	'libs/proc_macros',
]

[workspace.dependencies]
api_resource = { path = 'libs/proc_macros/api_resource' }
apis_bike = { path = 'libs/apis/bike' }
apis_car = { path = 'libs/apis/car' }
apis_project = { path = 'libs/apis/project' }
app = { path = 'libs/app' }
argon2 = '0.5'
async-stream = '0.3'
async-trait = '0.1'
axum = { version = '0.8', features = ['default', 'tracing', 'ws'] }
axum-extra = { version = '0.12', features = ['typed-header'] }
bb8 = { version = '0.9', features = ['default'] }
bb8-redis = { version = '0.24.0' }
bytes = '1.10'
chrono = { version = '0.4', features = ['serde'] }
clap = { version = '4.5', features = ['derive'] }
color-eyre = '0.6'
config = { path = 'libs/config' }
csv = '1.4'
darling = '0.21'
eyre = { version = '0.6', features = ['default'] }
field-selector = { path = 'libs/field-selector' }
flagsmith = { version = '2.0.0', features = [] }
futures = '0.3'
general = { path = 'libs/general' }
hex = '0.4'
http = { version = '1.3' }
jsonwebtoken = { version = '10.2', features = ['aws_lc_rs'] }
k8s-openapi = { version = '0.26', features = ['v1_34'] }
kube = { version = '2.0', features = ['derive', 'runtime'] }
models_project = { path = 'libs/models/project' }
mongodb = '3.4'
oauth2 = '5.0'
pluralizer = '0.5'
proc-macro2 = '1.0'
proc_macros = { path = 'libs/proc_macros' }
prost = '0.14'
quote = '1.0'
r2d2 = { version = '0.8', features = [] }
rand = '0.10.0-rc.0'
redis = { version = '1.0.0-rc.3', features = ['aio', 'r2d2', 'tokio-comp', 'connection-manager'] }
reqwest = { version = '0.12', features = ['json', 'rustls-tls'], default-features = false }
schemars = '1.1'
sea-orm = { version = '2.0.0-rc.19', features = ['sqlx-postgres', 'runtime-tokio-rustls', 'macros', 'with-uuid', 'with-chrono', 'mock', 'debug-print', 'with-json'] }
sea-orm-migration = { version = '2.0.0-rc.19', features = ['sqlx-postgres', 'runtime-tokio-rustls'] }
sea_orm_resource = { path = 'libs/proc_macros/sea_orm_resource' }
selectable_fields = { path = 'libs/proc_macros/selectable_fields' }
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0' }
services = { path = 'libs/services' }
sha2 = '0.10'
sqlx = { version = '0.9.0-alpha.1', default-features = false, features = ['postgres', 'macros', 'uuid', 'chrono', 'migrate'] }
strum = { version = '0.27', features = ['derive'] }
syn = { version = '2.0', features = ['full', 'extra-traits', 'visit'] }
tabled = '0.20'
testcontainers = '0.25'
testcontainers-modules = { version = '0.13', features = ['postgres', 'mongo', 'redis'] }
thiserror = '2.0'
tokio = { version = '1.48', features = ['full'] }
tokio-stream = { version = '0.1', features = ['sync'] }
tonic = '0.14'
tonic-reflection = '0.14'
tonic-web = '0.14'
tower = '0.5'
tower-http = { version = '0.6', features = ['timeout', 'trace', 'compression-full', 'decompression-full', 'cors'] }
tower_governor = '0.8'
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
trybuild = '1.0'
ts-rs = '11.1'
typeshare = '1.0'
typeshare-cli = { version = '1.13', featires = [] }
utoipa = { version = '5.4', features = ['axum_extras', 'chrono', 'uuid'] }
utoipa-rapidoc = { version = '6.0', features = ['axum'] }
utoipa-redoc = { version = '6.0', features = ['axum'] }
utoipa-scalar = { version = '0.3', features = ['axum'] }
utoipa-swagger-ui = { version = '9.0', features = ['axum'] }
uuid = { version = '1.18', features = ['serde', 'v4', 'v7'] }
validator = { version = '0.20', features = ['derive'] }
walkdir = '2.5'

[profile.dev]
incremental = true
codegen-units = 16 # Parallel compilation
opt-level = 0 # No optimization for speed

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
panic = 'abort'
incremental = false # Explicit: LTO doesn't benefit from incremental
