
[workspace]
resolver = '2'
members = [
    'apps/zerg/api',
    'apps/zerg/tasks',
    'libs/core/axum-helpers',
    'libs/core/config',
    'libs/core/field-selector',
    'libs/core/grpc',
    'libs/core/proc_macros',
    'libs/core/proc_macros/api_resource',
    'libs/core/proc_macros/sea_orm_resource',
    'libs/core/proc_macros/selectable_fields',
    'libs/database',
    'libs/domains/cloud_resources',
    'libs/domains/projects',
    'libs/domains/users',
    'libs/migration',
    'libs/rpc',
    'libs/testing/test-utils',
]

[workspace.dependencies]
api_resource = { path = 'libs/core/proc_macros/api_resource' }
argon2 = { version = '0.5.3', features = ['std'] }
async-stream = '0.3.6'
async-trait = '0.1.89'
axum = { version = "0.8.8", features = ['default', 'tracing', 'ws'] }
axum-extra = { version = "0.12.3", features = ['typed-header'] }
axum-helpers = { path = 'libs/core/axum-helpers' }
#bb8 = { version = '0.9.1', features = ['default'] }
#bb8-redis = { version = '0.26.0' }
#bytes = '1.11.0'
chrono = { version = '0.4.42', features = ['serde'] }
#clap = { version = '4.5.53', features = ['derive'] }
color-eyre = '0.6.5'
core_config = { path = 'libs/core/config' }
core_proc_macros = { path = 'libs/core/proc_macros' }
#csv = '1.4.0'
darling = '0.23.0'
database = { path = 'libs/database' }
domain_cloud_resources = { path = 'libs/domains/cloud_resources' }
domain_projects = { path = 'libs/domains/projects' }
domain_users = { path = 'libs/domains/users' }
eyre = { version = '0.6.12', features = ['default'] }
field-selector = { path = 'libs/core/field-selector' }
#flagsmith = { version = '2.1.0', features = [] }
futures = '0.3.31'
grpc-client = { path = 'libs/core/grpc' }
http = { version = '1.4.0' }
jsonwebtoken = { version = '10.2.0', features = ['aws_lc_rs'] }
#k8s-openapi = { version = '0.26.0', features = ['v1_34'] }
#kube = { version = '2.0.1', features = ['derive', 'runtime'] }
migration = { path = 'libs/migration' }
mockall = '0.14.0'
#mongodb = '3.4.1'
oauth2 = '5.0.0'
pluralizer = '0.5.0'
proc-macro2 = '1.0.103'
prost = '0.14.1'
quote = '1.0.42'
#r2d2 = { version = '0.8.10', features = [] }
rand = '0.10.0-rc.5'
redis = { version = "1.0.1", features = ['aio', 'r2d2', 'tokio-comp', 'connection-manager'] }
regex = '1.12.2'
reqwest = { version = "0.12.26", features = ['json', 'rustls-tls'], default-features = false }
rpc = { path = 'libs/rpc' }
schemars = '1.1.0'
sea-orm = { version = '2.0.0-rc.20', features = ['sqlx-postgres', 'runtime-tokio-rustls', 'macros', 'with-uuid', 'with-chrono', 'mock', 'debug-print', 'with-json'] }
sea-orm-migration = { version = '2.0.0-rc.20', features = ['sqlx-postgres', 'runtime-tokio-rustls'] }
sea_orm_resource = { path = 'libs/core/proc_macros/sea_orm_resource' }
selectable_fields = { path = 'libs/core/proc_macros/selectable_fields' }
serde = { version = '1.0.228', features = ['derive'] }
serde_json = { version = '1.0.145' }
sha2 = '0.10.9'
sqlx = { version = '0.9.0-alpha.1', default-features = false, features = ['postgres', 'macros', 'uuid', 'chrono', 'migrate'] }
strum = { version = '0.27.2', features = ['derive'] }
syn = { version = '2.0.111', features = ['full', 'extra-traits', 'visit'] }
#tabled = '0.20.0'
test-utils = { path = 'libs/testing/test-utils' }
testcontainers = '0.26.2'
testcontainers-modules = { version = '0.14.0', features = ['postgres', 'mongo', 'redis'] }
thiserror = '2.0.17'
tokio = { version = '1.48.0', features = ['full'] }
tokio-stream = { version = '0.1.17', features = ['sync'] }
tonic = { version = '0.14.2', features = ['zstd'] }
tonic-prost = '0.14.2'
tower = '0.5.2'
tower-http = { version = '0.6.8', features = ['timeout', 'trace', 'compression-full', 'decompression-full', 'cors'] }
tower_governor = '0.8.0'
tracing = "0.1.44"
tracing-error = '0.2.1'
tracing-subscriber = { version = '0.3.22', features = ['env-filter', 'json', 'serde_json'] }
trybuild = '1.0.114'
ts-rs = { version = "11.1.0", features = ["chrono-impl", "uuid-impl"] }
utoipa = { version = '5.4.0', features = ['axum_extras', 'chrono', 'uuid'] }
utoipa-rapidoc = { version = '6.0.0', features = ['axum'] }
utoipa-redoc = { version = '6.0.0', features = ['axum'] }
utoipa-scalar = { version = '0.3.0', features = ['axum'] }
utoipa-swagger-ui = { version = '9.0.2', features = ['axum'] }
uuid = { version = '1.19.0', features = ['serde', 'v4', 'v7'] }
validator = { version = '0.20.0', features = ['derive'] }
#walkdir = '2.5.0'

[profile.dev]
incremental = true
codegen-units = 16 # Parallel compilation
opt-level = 0 # No optimization for speed

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
panic = 'abort'
incremental = false # Explicit: LTO doesn't benefit from incremental
