[package]
name = "nx-playground-ci"
version = "0.1.0"
edition = "2021"
description = "Dagger CI pipelines for nx-playground monorepo"
publish = false

[[bin]]
name = "ci"
path = "src/main.rs"

[dependencies]

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
# Dagger SDK
dagger-sdk = "0.19"

# Error handling
eyre = "0.6"

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
