[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }

[dependencies.sea-orm]
workspace = true
