[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema-gen"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
color-eyre = { workspace = true }
pluralizer = { workspace = true }
serde = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
walkdir = "2.5"
