[package]
name = "zerg_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-helpers = { workspace = true, features = ["redis"] }
color-eyre = { workspace = true }
core_config = { workspace = true }
database = { workspace = true, features = ["all"] }
domain_cloud_resources = { workspace = true }
domain_projects = { workspace = true }
domain_users = { workspace = true }
eyre = { workspace = true }
migration = { workspace = true }
redis = { workspace = true }
rpc = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = "0.12"
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
