[package]
name = "zerg_api"
version = "0.1.0"
edition = "2024"

[dependencies]
api-forge = { workspace = true }
arangors = { workspace = true }
axum = { workspace = true }
axum-helpers = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
core_config = { workspace = true }
database = { workspace = true, features = ["all"] }
domain_cloud_resources = { workspace = true }
domain_projects = { workspace = true }
domain_tasks = { path = "../../../libs/domains/tasks" }
domain_users = { workspace = true }
eyre = { workspace = true }
grpc-client = { workspace = true }
migration = { workspace = true }
neo4rs = { workspace = true }
oauth2 = { workspace = true }

# Vector & Graph databases
qdrant-client = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
#reqwest = { workspace = true }
rpc = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# Messaging
async-nats = "0.40"
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
