[package]
name = "zerg_email_nats"
version = "0.1.0"
edition = "2021"
description = "Email worker service using NATS JetStream"
license = "MIT"

[[bin]]
name = "zerg_email_nats"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[[example]]
name = "publish_test"
path = "examples/publish_test.rs"

[dependencies]
# Core configuration
core_config = { workspace = true }

# Email library (with NATS support)
email = { workspace = true }

# NATS worker framework
nats-worker = { workspace = true }
messaging = { workspace = true }

# NATS client
async-nats = { workspace = true }

# HTTP server for health
axum = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }

# Error handling
eyre = { workspace = true }

# Observability
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
