[package]
name = "zerg_email_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-helpers = { workspace = true }
core_config = { workspace = true }
database = { workspace = true, features = ["config"] }
domain_notifications = { workspace = true }
eyre = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
stream-worker = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
