[package]
name = "zerg_email"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zerg_email"
path = "src/main.rs"

[[bin]]
name = "send_test_email"
path = "src/bin/send_test_email.rs"

[dependencies]
# Web framework (for health endpoints)
axum = { workspace = true }
color-eyre = { workspace = true }

# Workspace libs
core_config = { workspace = true }
database = { workspace = true, features = ["redis", "config"] }
email = { workspace = true }

# Error handling
eyre = { workspace = true }

# Redis (for direct commands in handlers)
redis = { workspace = true }
stream-worker = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
