[package]
name = "zerg_tasks_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
core_config = { workspace = true }
database = { workspace = true, features = ["config"] }
domain_tasks = { workspace = true }
eyre = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
stream-worker = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
