[package]
name = "zerg_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { version = "0.12", features = ["zstd"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
domain_tasks = { path = "../../../libs/domains/tasks" }
database = { workspace = true, features = ["config"] }
core_config = { workspace = true }
chrono = { workspace = true }
