[package]
name = "zerg_tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
core_config = { workspace = true }
database = { workspace = true, features = ["config"] }
domain_tasks = { path = "../../../libs/domains/tasks" }
eyre = { workspace = true }
grpc-client = { path = "../../../libs/core/grpc", features = ["server"] }
rpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
