[package]
name = "axum-helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
futures.workspace = true
chrono.workspace = true

# OpenAPI/Swagger dependencies
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-redoc.workspace = true
utoipa-rapidoc.workspace = true
utoipa-scalar.workspace = true

# Internal dependencies
core_config = { workspace = true }

# Database dependencies - required for error handling
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Optional database dependencies
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
