[package]
name = "axum-helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
axum.workspace = true
chrono.workspace = true

# Internal dependencies
core_config = { workspace = true }
futures.workspace = true

# Optional database dependencies
redis = { workspace = true, optional = true }

# Database dependencies - required for error handling
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

# OpenAPI/Swagger dependencies
utoipa.workspace = true
utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
utoipa-scalar.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio-test = "0.4"
