[package]
name = "axum-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true

# Internal dependencies
core_config = { workspace = true }

# JWT and error handling
eyre.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true

# Redis - no longer optional, required for auth
redis = { workspace = true }

# Database dependencies - required for error handling
sea-orm = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

# OpenAPI/Swagger dependencies
utoipa.workspace = true
utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
utoipa-scalar.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
temp-env = "0.3"
tokio-test = "0.4"
