[package]
name = "core_config"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
temp-env = "0.3"
