[package]
name = "messaging"
version = "0.1.0"
edition = "2021"
description = "Common messaging abstractions with optional NATS backend"
license = "MIT"

[features]
default = []
nats = [
    "dep:async-nats",
    "dep:axum",
    "dep:futures",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:tower-http",
    "dep:eyre",
]

[dependencies]

# NATS dependencies (optional)
async-nats = { workspace = true, optional = true }
# Core dependencies (always included)
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
eyre = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
