[package]
name = "nats-worker"
version = "0.1.0"
edition = "2021"
description = "NATS JetStream worker framework for background job processing"
license = "MIT"

[dependencies]
# Core messaging abstractions
messaging = { workspace = true }

# NATS
async-nats = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4"] }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP server (for health endpoints)
axum = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
