[package]
name = "core_proc_macros"
version = "0.1.0"
edition = "2021"

[features]
default = []
selectable_fields = ["dep:selectable_fields"]
api_resource = ["dep:api_resource"]
sea_orm_resource = ["dep:sea_orm_resource"]

[dependencies]
api_resource = { workspace = true, optional = true }
sea_orm_resource = { workspace = true, optional = true }
selectable_fields = { workspace = true, optional = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
