[package]
name = "stream-worker"
version = "0.1.0"
edition = "2024"
description = "Generic Redis Streams worker library with consumer groups, DLQ, and health endpoints"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
